# ChangeLog for media-fonts/terminus-font
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/terminus-font/ChangeLog,v 1.16 2004/12/15 20:07:10 corsair Exp $

  15 Dec 2004; Markus Rothe <corsair@gentoo.org> terminus-font-4.09.ebuild:
  Stable on ppc64

  01 Nov 2004; Markus Rothe <corsair@gentoo.org> terminus-font-4.09.ebuild:
  Marked ~ppc64; bug #68103

*terminus-font-4.09 (12 Sep 2004)

  12 Sep 2004; Mamoru KOMACHI <usata@gentoo.org> +terminus-font-4.09.ebuild:
  Version bumped. This closes bug #62728.

  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> terminus-font-4.07.ebuild:
  Fix use invocation

  08 Mar 2004; <matsuu@gentoo.org> terminus-font-4.07.ebuild:
  Marked as stable.
  Removed old versions.

*terminus-font-4.07 (26 Feb 2004)

  26 Feb 2004; <matsuu@gentoo.org> terminus-font-4.07.ebuild:
  Version bumped. Bug # 42882.

  23 Feb 2004; Lars Weiler <pylon@gentoo.org> terminus-font-4.06.ebuild:
  stable on ppc

  03 Feb 2004; <augustus@gentoo.org> terminus-font-4.06.ebuild:
  Added ~amd64 keyword.

*terminus-font-4.06 (31 Jan 2004)

  31 Jan 2004; Mamoru KOMACHI <usata@gentoo.org> metadata.xml,
  terminus-font-4.03-r1.ebuild, terminus-font-4.06.ebuild:
  Version bumped. Updated HOMEPAGE.

*terminus-font-4.03-r1 (26 Sep 2003)

  26 Sep 2003; Matthew Kennedy <mkennedy@gentoo.org>
  terminus-font-4.03-r1.ebuild:
  add upstream authors courier-like a patch

*terminus-font-4.03 (30 Jul 2003)

  30 Jul 2003; Mamoru KOMACHI <usata@gentoo.org> terminus-font-4.03.ebuild:
  New version. Tidy up ebuild according to the change in source package
  structure. Thanks to Yuri Enshin <kot@formoza-centre.ru> in bug #23500.

*terminus-font-4.00-r2 (24 Apr 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

*terminus-fonts-4.00 (23 Apr 2003)

  24 Apr 2003; Tom Payne <twp@gentoo.org> terminus-fonts-4.00-r2.ebuild :
