@@ -1,6 +1,8 @@
-MD5 2fd878d50d08e19174aebc0710a58128 ChangeLog 2228
+MD5 ebd29de13af7f62db65feb7e6e8921d0 terminus-font-4.11.ebuild 1110
+MD5 60676cf60fca62bfc640fe1c60912b0d terminus-font-4.07.ebuild 1096
+MD5 f30c80cd2efee6f287fac5069ea237f2 terminus-font-4.09.ebuild 1110
+MD5 22ed2b38a5b141a283e4925c0206c55b ChangeLog 2369
 MD5 295674d4bed87f5a7c2796e032ed561e metadata.xml 158
-MD5 5b35b0dfeba14922263d8ea912d65266 terminus-font-4.07.ebuild 1098
-MD5 17c4249fdc17873000df18331c37c153 terminus-font-4.09.ebuild 1111
 MD5 92f73aafe5535cf0996be1b810ab7c9b files/digest-terminus-font-4.07 70
 MD5 fd82d94715f95b654cc4ea9a696b7981 files/digest-terminus-font-4.09 70
+MD5 675b78bea73e2d292d68944a6c455e73 files/digest-terminus-font-4.11 70
